Closed
Bug 329675
Opened 19 years ago
Closed 19 years ago
gtk assertion `GTK_IS_WINDOW (window)' failure
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: ginnchen+exoracle)
Details
Attachments
(1 file)
1.02 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Caused by the patch from bug 295447.
Steps:
0) Start TestGtkEmbed
1) type www.gnome.org in the location entry, press return
2) Wait for the page to load
3) Click in the web page area
Result:
(Gecko:8194): Gtk-CRITICAL **: gtk_window_present_with_time: assertion `GTK_IS_WINDOW (window)' failed
Trace:
(gdb) where
#0 IA__g_log (log_domain=0x77df8fb7 "Gtk", log_level=2011140023, format=0x77df8fb7 "Gtk") at gmessages.c:516
#1 0x77992ffa in IA__g_return_if_fail_warning (log_domain=0x77df8fb7 "Gtk", pretty_function=0x77ea0324 "gtk_window_present_with_time", expression=0x77df8fb7 "Gtk") at gmessages.c:532
#2 0x77dee134 in IA__gtk_window_present_with_time (window=0x0, timestamp=0) at gtkwindow.c:6057
#3 0x77dee1e1 in IA__gtk_window_present (window=0x77df8fb7) at gtkwindow.c:6036
#4 0x7654de9a in nsWindow::SetFocus (this=0x83ddad0, aRaise=1) at /opt/source/mozilla/trunk/mozilla/widget/src/gtk2/nsWindow.cpp:721
#5 0x75e1d22d in nsEventStateManager::SendFocusBlur (this=0x83dd448, aPresContext=0x83dd148, aContent=0x0, aEnsureWindowHasFocus=1)
at /opt/source/mozilla/trunk/mozilla/content/events/src/nsEventStateManager.cpp:4324
#6 0x75e1da62 in nsEventStateManager::SetContentState (this=0x83dd448, aContent=0x0, aState=2) at /opt/source/mozilla/trunk/mozilla/content/events/src/nsEventStateManager.cpp:3910
#7 0x75e1acaa in nsEventStateManager::PostHandleEvent (this=0x83dd448, aPresContext=0x83dd148, aEvent=0x7fbd9ab0, aTargetFrame=0x84e0244, aStatus=0x7fbd98dc, aView=0x83dda60)
at /opt/source/mozilla/trunk/mozilla/content/events/src/nsEventStateManager.cpp:1976
#8 0x75b4fa22 in PresShell::HandleEventInternal (this=0x83e0c20, aEvent=0x7fbd9ab0, aView=0x83dda60, aStatus=0x7fbd98dc) at /opt/source/mozilla/trunk/mozilla/layout/base/nsPresShell.cpp:6135
#9 0x75b4fc9c in PresShell::HandlePositionedEvent (this=0x83e0c20, aView=0x83dda60, aTargetFrame=0x84e0244, aEvent=0x7fbd9ab0, aEventStatus=0x7fbd98dc)
at /opt/source/mozilla/trunk/mozilla/layout/base/nsPresShell.cpp:5996
#10 0x75b50698 in PresShell::HandleEvent (this=0x83e0c20, aView=0x83dda60, aEvent=0x7fbd9ab0, aEventStatus=0x7fbd98dc) at /opt/source/mozilla/trunk/mozilla/layout/base/nsPresShell.cpp:5824
#11 0x75fb0d52 in nsViewManager::HandleEvent (this=0x83dd9e0, aView=0x83dda60, aPoint=@0x7fbd998c, aEvent=0x7fbd9ab0, aCaptured=0) at /opt/source/mozilla/trunk/mozilla/view/src/nsViewManager.cpp:1702
#12 0x75fb1c49 in nsViewManager::DispatchEvent (this=0x83dd9e0, aEvent=0x7fbd9ab0, aStatus=0x7fbd9a20) at /opt/source/mozilla/trunk/mozilla/view/src/nsViewManager.cpp:1658
#13 0x75fa439f in HandleEvent (aEvent=0x7fbd9ab0) at /opt/source/mozilla/trunk/mozilla/view/src/nsView.cpp:171
#14 0x7655a925 in nsCommonWidget::DispatchEvent (this=0x8420588, aEvent=0x7fbd9ab0, aStatus=@0x7fbd9b04) at /opt/source/mozilla/trunk/mozilla/widget/src/gtk2/nsCommonWidget.cpp:234
#15 0x76552135 in nsWindow::OnButtonPressEvent (this=0x8420588, aWidget=0x829dc20, aEvent=0x8322000) at /opt/source/mozilla/trunk/mozilla/widget/src/gtk2/nsWindow.cpp:1754
#16 0x7655223e in button_press_event_cb (widget=0x829dc20, event=0x8322000) at /opt/source/mozilla/trunk/mozilla/widget/src/gtk2/nsWindow.cpp:3994
xulrunner trunk from 2006-03-07.
I verified it with xulrunner.
Attachment #214403 -
Flags: superreview+
Attachment #214403 -
Flags: review?(roc)
Attachment #214403 -
Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Summary: gtk assertion failure → gtk assertion `GTK_IS_WINDOW (window)' failure
You need to log in
before you can comment on or make changes to this bug.
Description
•