Bug 329675 gtk assertion `GTK_IS_WINDOW (window)' failure r+sr=roc